--- a/index.html
+++ b/index.html
@@ -11,10 +11,21 @@
     <div class="header">
         <h2>CHEST PUMP</h1>
         <ul class="header-link">
-            <li>About Me</li>
+            <li onclick="">About Me</li>
             <li>Ideas</li>
             <li>Credentials</li>
         </ul>
+        <h2>Best Chest Exercises</h2>
+    </div>
+    <div class="mid">
+        <h2>Best Exercises</h2>
+        <div>
+        </div>
+    </div>
+    <p>Inspirational Speach</p>
+    <p>Sign In Button</p>
+    <div class="bottom">
+        <p>copyright</p>
     </div>
 </body>
 </html>
